# ply2splat

./: .gitignore  AGENTS.md  Cargo.toml  GITHUB_PAGES_SETUP.md  README.md  bump_version.py  flake.nix  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  copilot-setup-steps.yml  deploy-gh-pages.yml  napi.yml  playwright.yml  python.yml  wasm.yml
bindings/js/ply2splat/: README.md  package.json  tsconfig.json
bindings/js/ply2splat/test/: node-integration.test.mjs
bindings/ply2splat-napi/: .gitignore  Cargo.toml  cli.js  package.json
bindings/ply2splat-napi/npm/darwin-arm64/: README.md  package.json
bindings/ply2splat-napi/npm/darwin-x64/: README.md  package.json
bindings/ply2splat-napi/npm/linux-arm64-gnu/: README.md  package.json
bindings/ply2splat-napi/npm/linux-x64-gnu/: README.md  package.json
bindings/ply2splat-napi/npm/linux-x64-musl/: README.md  package.json
bindings/ply2splat-napi/npm/win32-arm64-msvc/: README.md  package.json
bindings/ply2splat-napi/npm/win32-x64-msvc/: README.md  package.json
bindings/ply2splat-napi/src/: lib.rs
bindings/ply2splat-python/: Cargo.toml
bindings/ply2splat-wasm/: Cargo.toml
bindings/ply2splat-wasm/src/: lib.rs
crates/fuzz/: Cargo.toml
crates/ply2splat/: Cargo.toml
crates/ply2splat-cli/: Cargo.toml
crates/ply2splat-cli/src/: main.rs
crates/ply2splat-core/: Cargo.toml  README.md
crates/ply2splat-core/src/: lib.rs
crates/ply2splat-napi/: Cargo.toml  browser.js  cli.js  index.d.ts  index.js  package.json  ply2splat-native.wasi-browser.js  ply2splat-native.wasi.cjs  pnpm-lock.yaml
crates/ply2splat-napi/__test__/: index.spec.ts
crates/ply2splat-napi/src/: lib.rs
crates/ply2splat-python/: Cargo.toml
crates/ply2splat-python/src/: lib.rs
crates/ply2splat-wasm/: Cargo.toml
crates/ply2splat-wasm/src/: lib.rs
crates/ply2splat/tests/: integration_test.rs
examples/: read_ply.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_conversion.rs
js-src/: .gitignore  helpers.ts  tsconfig.json
python/ply2splat/: __init__.pyi
scripts/misc/: bump_version.py
src/: lib.rs
tests/: integration_test.rs
www/ply2splat/: .cta.json  .gitignore  README.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
www/ply2splat/e2e/: converter.spec.ts
www/ply2splat/e2e/fixtures/: test.ply
www/ply2splat/src/: main.tsx  ply2splat.d.ts
www/ply2splat/src/components/: Flex.tsx  Footer.tsx  Header.tsx  SplatPreview.tsx
www/ply2splat/src/components/ui/: progress.tsx
www/ply2splat/src/lib/: ply2splat-browser.js  ply2splat-client.ts  ply2splat.worker.js  use-download-data.ts  wasi-worker-wrapper.js  worker-polyfill.js
www/ply2splat/src/routes/: __root.tsx  index.tsx
