[package]
name = "ply2splat"
version = "0.2.0"
edition = "2021"
description = "A Rust crate for processing Gaussian Splatting PLY and SPLAT files"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bastikohn/ply2splat"
keywords = ["graphics", "gaussian-splatting", "ply", "splat", "3d"]
categories = ["command-line-utilities", "multimedia::encoding"]
exclude = [
    "test_cache",
    "test_files",
    ".github",
    ".devcontainer",
    "flake.nix",
    "flake.lock",
    ".envrc",
    "fuzz",
    "AGENTS.md",
]

# WASM package metadata
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "ply2splat"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "ply2splat"
path = "src/bin/ply2splat.rs"

[features]
default = []
python = ["pyo3"]
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
ply-rs = "0.1"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
rayon = "1.8"
indicatif = "0.18.3"
memmap2 = "0.9"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2.105", optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Rayon doesn't work in WASM, so we don't include it for wasm32

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
