[workspace]
members = [
    "crates/ply2splat-core",
    "crates/ply2splat-cli",
    "crates/ply2splat-wasm",
    "crates/ply2splat-python",
    "crates/ply2splat-napi",
]
resolver = "2"

default-members = ["crates/ply2splat-cli"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/bastikohn/ply2splat"

# Legacy package configuration for backward compatibility
# The actual library is now in crates/ply2splat-core
[package]
name = "ply2splat"
version = "0.2.0"
edition = "2021"
description = "A Rust crate for processing Gaussian Splatting PLY and SPLAT files"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bastikohn/ply2splat"
keywords = ["graphics", "gaussian-splatting", "ply", "splat", "3d"]
categories = ["command-line-utilities", "multimedia::encoding"]
exclude = [
    "test_cache",
    "test_files",
    ".github",
    ".devcontainer",
    "flake.nix",
    "flake.lock",
    ".envrc",
    "fuzz",
    "AGENTS.md",
]

[lib]
name = "ply2splat"
path = "src/lib.rs"

# Re-export from the core crate for backward compatibility
[dependencies]
ply2splat-core = { path = "crates/ply2splat-core", features = ["parallel"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
