[package]
name = "ply2splat-fuzz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ply2splat = { path = "../crates/ply2splat" }
arbitrary = { version = "1", features = ["derive"] }

[[bin]]
name = "fuzz_conversion"
path = "fuzz_targets/fuzz_conversion.rs"
test = false
doc = false
