[package]
name = "ply2splat-napi"
version.workspace = true
edition.workspace = true
description = "Native Node.js bindings for Gaussian Splatting PLY to SPLAT conversion via NAPI-RS"
license.workspace = true
readme = "../../README.md"
repository.workspace = true
keywords = ["graphics", "gaussian-splatting", "napi", "nodejs"]
categories = ["multimedia::encoding"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ply2splat = { path = "../..", features = ["parallel", "cli"] }
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
