[package]
name = "ply2splat-wasm"
version.workspace = true
edition.workspace = true
description = "WebAssembly bindings for Gaussian Splatting PLY to SPLAT conversion"
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["graphics", "gaussian-splatting", "wasm", "webassembly"]
categories = ["wasm", "multimedia::encoding"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
ply2splat = { path = "../..", default-features = false }
wasm-bindgen = "0.2.105"
js-sys = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
