[package]
name = "ply2splat-cli"
version = "0.2.0"
edition = "2021"
description = "CLI tool for converting Gaussian Splatting PLY files to SPLAT format"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/bastikohn/ply2splat"
keywords = ["graphics", "gaussian-splatting", "ply", "splat", "3d"]
categories = ["command-line-utilities"]

[[bin]]
name = "ply2splat"
path = "src/main.rs"

[dependencies]
ply2splat-core = { path = "../ply2splat-core", features = ["parallel"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.18.3"
