[package]
name = "ply2splat-core"
version = "0.2.0"
edition = "2021"
description = "Core library for Gaussian Splatting PLY to SPLAT file conversion"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bastikohn/ply2splat"
keywords = ["graphics", "gaussian-splatting", "ply", "splat", "3d"]
categories = ["multimedia::encoding", "graphics"]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
ply-rs = "0.1"
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
rayon = { version = "1.8", optional = true }

[dev-dependencies]
tempfile = "3.8"
