[package]
name = "ply2splat-wasm"
version = "0.2.0"
edition = "2021"
description = "WebAssembly bindings for Gaussian Splatting PLY to SPLAT conversion"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bastikohn/ply2splat"
keywords = ["graphics", "gaussian-splatting", "wasm", "webassembly"]
categories = ["wasm", "multimedia::encoding"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
ply2splat-core = { path = "../ply2splat-core", default-features = false }
wasm-bindgen = "0.2.105"
js-sys = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
